# dali_custom_operators

./: .gitignore  CMakeLists.txt  README.md  TestNotebook.ipynb  file_file_loader.cc  file_file_loader.h  requirements.txt  test.py  tiff_decoder.cc  tiff_decoder.h  tiff_libtiff.cc
data/: README.md  file_list.txt
data/case_82/SMIR.Brain.XX.O.CT_MTT.346120/: SMIR.Brain.XX.O.CT_MTT.346120.tiff
data/case_82/SMIR.Brain.XX.O.OT.346121/: SMIR.Brain.XX.O.OT.346121.tiff
data/case_83/SMIR.Brain.XX.O.CT_MTT.346127/: SMIR.Brain.XX.O.CT_MTT.346127.tiff
data/case_83/SMIR.Brain.XX.O.OT.346128/: SMIR.Brain.XX.O.OT.346128.tiff
data/case_84/SMIR.Brain.XX.O.CT_MTT.346134/: SMIR.Brain.XX.O.CT_MTT.346134.tiff
data/case_84/SMIR.Brain.XX.O.OT.346135/: SMIR.Brain.XX.O.OT.346135.tiff
data/case_85/SMIR.Brain.XX.O.CT_MTT.346141/: SMIR.Brain.XX.O.CT_MTT.346141.tiff
data/case_85/SMIR.Brain.XX.O.OT.346142/: SMIR.Brain.XX.O.OT.346142.tiff
data/case_86/SMIR.Brain.XX.O.CT_MTT.346148/: SMIR.Brain.XX.O.CT_MTT.346148.tiff
data/case_86/SMIR.Brain.XX.O.OT.346149/: SMIR.Brain.XX.O.OT.346149.tiff
data/case_87/SMIR.Brain.XX.O.CT_MTT.346155/: SMIR.Brain.XX.O.CT_MTT.346155.tiff
data/case_87/SMIR.Brain.XX.O.OT.346156/: SMIR.Brain.XX.O.OT.346156.tiff
data/case_88/SMIR.Brain.XX.O.CT_MTT.346162/: SMIR.Brain.XX.O.CT_MTT.346162.tiff
data/case_88/SMIR.Brain.XX.O.OT.346163/: SMIR.Brain.XX.O.OT.346163.tiff
data/case_89/SMIR.Brain.XX.O.CT_MTT.346169/: SMIR.Brain.XX.O.CT_MTT.346169.tiff
data/case_89/SMIR.Brain.XX.O.OT.346170/: SMIR.Brain.XX.O.OT.346170.tiff
data/case_90/SMIR.Brain.XX.O.CT_MTT.346176/: SMIR.Brain.XX.O.CT_MTT.346176.tiff
data/case_90/SMIR.Brain.XX.O.OT.346177/: SMIR.Brain.XX.O.OT.346177.tiff
data/case_91/SMIR.Brain.XX.O.CT_MTT.346183/: SMIR.Brain.XX.O.CT_MTT.346183.tiff
data/case_91/SMIR.Brain.XX.O.OT.346184/: SMIR.Brain.XX.O.OT.346184.tiff
data/case_92/SMIR.Brain.XX.O.CT_MTT.346190/: SMIR.Brain.XX.O.CT_MTT.346190.tiff
data/case_92/SMIR.Brain.XX.O.OT.346191/: SMIR.Brain.XX.O.OT.346191.tiff
data/case_93/SMIR.Brain.XX.O.CT_MTT.346197/: SMIR.Brain.XX.O.CT_MTT.346197.tiff
src/: file_reader.cc  file_reader.h  tiff_libtiff.h
(+3 files in other folders)
